--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@
  /*@import url('https://fonts.googleapis.com/icon?family=Material+Icons');*/
  @import url('"https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"');
 
+ div.d-sm-flex.align-items-center{
+    display: none !important;
+ }
  format-mooin4 #region-main-box{
     max-width: 80% !important;
     border: 0px !important;
